2000-04-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99i

	Dave made some documentation updates.

2000-04-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* flock-build: Add malarky.  By default, --enable-parse-clocks.
	Start 2 builds, one with and the other without rsaref.

	* configure.in: 4.0.99h6
	Dave improved the crypto stuff some more.

2000-04-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_acts.c (acts_receive): Do a better job with year
	conversions and leap-year checks.  The PTB stuff caught this.
	Reported by: Daniel.Aeby@eam.admin.ch

2000-04-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_atom.c (atom_pps): Bugfix
	From: Philippe Charnier <charnier@xp11.frmug.org>

2000-03-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* libparse/clk_wharton.c (cvt_wharton_400a): Do not return
	CVT_NONE when receiving the early warning bit set.
	From: Philippe De Muyter  <phdm@macqel.be>

	* configure.in: 4.0.99h5
	Dave made more changes to the auth key stuff.

2000-03-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99h4
	Dave made a bunch of changes/fixes to the auth key stuff.

2000-03-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_resolver.c: Typos.

2000-03-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99h3

	* ntpd/ntp_intres.c: Use LOG_INFO instead of LOG_DEBUG.
	* ntpd/ntp_resolver.c: Ditto.

2000-03-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* util/Makefile.am (ntp_genkeys_LDADD): Might need snprintf (-lntp)

	* librsaref/Makefile.am (stamp-rsaref): nodist_HEADERS are not
	supoprted yet.  Hack around it.

	* ntpd/ntp_resolver.c (findhostaddr): hstrerror isn't always available.

	* configure.in: Look for hstrerror.

	* util/ntp_genkeys.c (main): Use snprintf, not sprintf.
	
	* ntpd/ntp_crypto.c: Use gethostname, not uname
	* util/ntp_genkeys.c: Ditto
	From: Dave Mills

2000-03-19  Harlan Stenn  <harlan@pfcs.com>

	* ntpd/ntp_proto.c (receive): Rename ntp_res_send() to